spacing issues for frontpage blocks

--- a/scss/_frontpage.scss
+++ b/scss/_frontpage.scss
@@ -20,7 +20,7 @@ body.home {
 	background: url('images/bg_texture2.jpg') no-repeat center center;
 	background-size: cover;
 	background-attachment: fixed;
-	padding: 7em 0 !important;
+	padding: 4em 0 !important;
 		a {
 		color: $pale_yellow;
 		text-shadow: 2px 2px 1px #111;
