--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -45,6 +45,7 @@ body.home #gk-header-nav.active {
 		background: url("images/frontpage_bg_mobile.jpg") repeat center center; /*different bg for mobile*/
 		background-size: inherit;
 		background-attachment: fixed;
+		padding: 3em 0 !important;
 	}
 
 	.speaker-page .entry-meta,
